microservices/Raring-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratingmicroservice
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratingmicroservice
  template:
    metadata:
      labels:
        app: ratingmicroservice
    spec:
      containers:
      - name: ratingmicroservice
        image: vieerd/poc:Rating-Microservice-6730656955
        imagePullPolicy: Never
        ports:
          - containerPort: 80 
        # readinessProbe:
        #   httpGet:
        #     path: /ratings
        #     port: 80
        #   periodSeconds: 30
        #   timeoutSeconds: 120
        #   successThreshold: 1
        #   failureThreshold: 10 
---
apiVersion: v1
kind: Service
metadata:
  name: ratingmicroservice
spec:
  selector:
    app: ratingmicroservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
