microservices/hotel-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotelmicroservice
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotelmicroservice
  template:
    metadata:
      labels:
        app: hotelmicroservice
    spec:
      containers:
      - name: hotelmicroservice
        image: vieerd/poc:Hotel-Microservice-6729755592
        imagePullPolicy: Never
        ports:
          - containerPort: 80
        readinessProbe:
          httpGet:
            path: /hotels
            port: 80
          periodSeconds: 60
          timeoutSeconds: 120
          successThreshold: 1
          failureThreshold: 10 
---
apiVersion: v1
kind: Service
metadata:
  name: hotelmicroservice
spec:
  selector:
    app: hotelmicroservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
