microservices/service-register.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serviceregistry
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serviceregistry
  template:
    metadata:
      labels:
        app: serviceregistry
    spec:
      containers:
        - name: serviceregistry
          image: vieerd/poc:Service-Registry-6721128908
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 60
            timeoutSeconds: 120
            successThreshold: 1
            failureThreshold: 10 

---
apiVersion: v1
kind: Service
metadata:
  name: serviceregistry
spec:
  selector:
    app: serviceregistry
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
