microservices/user-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermicroservice
  namespace: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermicroservice
  template:
    metadata:
      labels:
        app: usermicroservice
    spec:
      containers:
      - name: usermicroservice
        image: vieerd/poc:User-Microservice-6730619136
        imagePullPolicy: Never
        ports:
          - containerPort: 80 
---
apiVersion: v1
kind: Service
metadata:
  name: usermicroservice
spec:
  selector:
    app: usermicroservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
